--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "game",
     "private": true,
-    "version": "0.8.0",
+    "version": "0.9.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -18,6 +18,7 @@
         "@vitejs/plugin-vue": "^3.1.0",
         "typescript": "^4.6.4",
         "vite": "^3.1.0",
+        "vite-plugin-pwa": "^0.13.1",
         "vue-tsc": "^0.40.4"
     },
     "volta": {
